fixed sizing on small device

--- a/frontend/src/components/app-components/App.css
+++ b/frontend/src/components/app-components/App.css
@@ -42,10 +42,10 @@ footer {
   flex-direction: column;
   min-height: 50vh;
   height: 100%;
-  width: 50%;
   border: 2px outset #45a29e;
   border-width: medium;
   margin: 30px 25%;
+  width: 50%;
   box-shadow: 1px 1px 8px;
   border-radius: 2%;
   padding: 20px 5%;
@@ -80,6 +80,11 @@ h1 {
   .header {
     font-size: 18px;
   }
+
+  .notes {
+    margin: 30px 15%;
+    width: 70%;
+  }
 }
 
 @media (max-width:470px) {
@@ -91,6 +96,8 @@ h1 {
   footer {
     font-size: 0.8rem;
   }
+
+  
 }
 
 
